c++: injected class name as default ttp arg [PR58538]

This function needs to handle this case like convert_template_argument.

	PR c++/58538

gcc/cp/ChangeLog:

	* semantics.cc (check_template_template_default_arg): Check
	maybe_get_template_decl_from_type_decl.

gcc/testsuite/ChangeLog:

	* g++.dg/template/ttp7.C: Remove expected error.